--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,15 +1,79 @@
-/*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS (and SCSS, if configured) file within this directory, lib/assets/stylesheets, or any plugin's
- * vendor/assets/stylesheets directory can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any other CSS
- * files in this directory. Styles in this file should be added after the last require_* statement.
- * It is generally better to create a new file per style scope.
- *
- *= require_tree .
- *= require_self
- */
+.llm-chat {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    max-width: 100vh;
+    height: 85vh;
+    margin: auto;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    padding: 0；
+    background-color: #fff;
+    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+    border-top: 1px solid #ccc;
+    overflow: hidden;
+}
+
+.llm-chat .chat-title {
+    font-size: 20px;
+    color: #333;
+    text-align: center;
+    background-color: #ffffff;
+    padding: 15px;
+    margin-bottom: 10px;
+    border-bottom: 1px solid #ccc;
+}
+
+.llm-chat .chat-history {
+    flex-grow: 1;
+    overflow-y: auto;
+    border: none !important;
+}
+
+.llm-chat p {
+    margin: 10px 0;
+    padding: 10px 20px;
+    border-radius: 25px;
+    background-color: #f0f0f0;
+    align-self: flex-end;
+    max-width: 80%;
+}
+
+
+
+.llm-chat p.llm-bot {
+    background-color: #0084ff;
+    color: #fff;
+    align-self: flex-start;
+}
+.llm-chat .typing-box {
+    display: flex;
+    justify-content: space-between;
+    border-top: 1px solid #ccc;
+    padding: 20px;
+   
+}
+
+.llm-chat .typing-box input {
+    flex-grow: 1;
+    border: 2px solid #a9a9a9; /* 灰色边框 */
+    padding: 10px;
+    height: 2.5vh;
+    border-radius: 12px;
+    margin-right: 10px;
+}
+
+
+.llm-chat .typing-box input:focus {
+    outline: none;
+    border-color: #000000;
+}
+
+.llm-chat .typing-box button {
+    background-color: #000000;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 12px;
+    cursor: pointer;
+}
